--- a/gridd.css
+++ b/gridd.css
@@ -1,30 +1,30 @@
 
-	.item1{
+	.header{
 		grid-area: header;
 		background-color: red;
 		height: 70px;
 		}
 
-	.item2{
+	.menu{
 		grid-area: menu;
 		background-color: blue;
 		height: 300px;
 	    width: 120px;
 		}
 
-	.item3{
+	.main{
 		grid-area: main;
 		background-color: green ; 
 		width: 1300px;
 		}
 
-	.item4 {
-		grid-area: infor;
+	.menuBar{
+		grid-area: menuBar;
 		background-color: black ; 
 		width: 1400px;
 		}
 
-	.item5 {
+	.footer {
 		grid-area: footer;
 		background-color: yellow ; 
 		width: 1300px;
@@ -33,11 +33,11 @@
 	.grid-container {
 		display: grid;
 		grid-template-areas:
-			'header header header '
-			'infor  infor  infor  '
+			'header header header'
+			'menuBar  menuBar  menuBar'
 			'menu main main'
 			'menu main main'
-			'menu footer footer ';
+			'menu footer footer';
 			grid-gap: 10px
 			padding: 10px;
 		}
